--- a/MatZipSpring/src/main/webapp/resources/css/restDetail.css
+++ b/MatZipSpring/src/main/webapp/resources/css/restDetail.css
@@ -32,7 +32,7 @@
 	height: 30px;
 }
 
-.recMenuContainer > .recMenuItem > .delIconContainer {
+.delIconContainer {
 	cursor: pointer;
 	position: absolute;
 	top: 10px;
@@ -44,7 +44,8 @@
 	height: 70px;
 }
 
-.menuList .menuItem {	
+.menuList .menuItem {
+	position: relative;
 	width: 70px;
 	height: 70px;	
 }
