--- a/MatZipSpring/src/main/webapp/resources/css/restDetail.css
+++ b/MatZipSpring/src/main/webapp/resources/css/restDetail.css
@@ -1,4 +1,5 @@
 @charset "UTF-8";
+
 .recMenuContainer {
 	width: 100%;
 	height: 200px;
@@ -68,8 +69,47 @@
 	align-items: center;
 }
 
-
-
 .restaurant-detail {
 	padding: 5px 0 10px 0;
 }
+
+#carouselContainer {	
+	z-index: 100;
+	left: 0;
+	top: 0;
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	background-color: #000A;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+#sectionContainerCenter {
+	height: 20000px;
+	overflow: scroll;
+}
+
+#carouselContainer #imgContainer {
+	background-color: #fff;
+	width: 60%;
+	height: 80%;
+	position: relative;
+}
+
+#carouselContainer .material-icons {
+	display: inline-block;
+	position: absolute;
+	top: 40px;
+	right: 40px;
+	color: #fff;
+	cursor: pointer;
+	font-size: 3rem;
+}
+
+.swiper-container {
+	height: 100%;
+}
+
+
