--- a/MatZipSpring/src/main/webapp/resources/css/restDetail.css
+++ b/MatZipSpring/src/main/webapp/resources/css/restDetail.css
@@ -1,6 +1,7 @@
 @charset "UTF-8";
 
 .recMenuContainer {
+	z-index: 20;
 	width: 100%;
 	height: 200px;
 	overflow-x: scroll;
@@ -73,8 +74,10 @@
 	padding: 5px 0 10px 0;
 }
 
-#carouselContainer {	
-	z-index: 100;
+#carouselContainer {
+	transition: 1s;
+	opacity: 0;
+	z-index: -10;
 	left: 0;
 	top: 0;
 	position: absolute;
@@ -86,9 +89,9 @@
 	align-items: center;
 }
 
-#sectionContainerCenter {
-	height: 20000px;
-	overflow: scroll;
+#sectionContainerCenter {	
+	z-index: 20;
+	overflow: auto;
 }
 
 #carouselContainer #imgContainer {
