캐러셀 마무으리~

--- a/MatZipSpring/src/main/webapp/resources/css/restDetail.css
+++ b/MatZipSpring/src/main/webapp/resources/css/restDetail.css
@@ -116,3 +116,37 @@
 }
 
 
+.swiper-container 
+.swiper-wrapper 
+.swiper-slide {
+	display: flex;
+    justify-content: center;
+    align-items: center;	
+}    
+    
+.swiper-container 
+.swiper-wrapper 
+.swiper-slide
+img {
+	width: 100%;
+	overflow: hidden;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
